Se agregor about y barra nav

--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active"><a href="#" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="/about.html" class="nav-link">Nosotros</a></li>
+          <li class="nav-item"><a href="/index.html" class="nav-link">Home</a></li>
+          <li class="nav-item active"><a href="#" class="nav-link">Nosotros</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Precios</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Términos y Condiciones</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
@@ -28,69 +28,19 @@
         <h1>Home</h1>
     </div>
     <div class="container">
-      <div class="d-flex">
-        <div class="col-sm-4">
-          <h3>Adquiera una tarjeta</h3>
-          <p>Adquiera su tarjeta de credito o de 
-            debito y aproveche sus beneficios 
-            solicitela en linea
-          </p>
-        </div>
-        <div class="col-sm-4">
-          <h3>Servicios online</h3>
-          <p>Haga cualquier operacion bacancaria
-            desde linea 
-          </p>
-        </div>
-        <div class="col-sm-4">
-          <h3>Prestamos</h3>
-          <p>Solicite un prestamo con una
-            taza de interes minima
-          </p>
-        </div>
-      </div>
-        <hr>
+        <nav class="breadcrumb">
+            <a class="breadcrumb-item" href="/index.html">Home</a>
+            <a class="breadcrumb-item active" aria-current="page">Nosotros</a>
+        </nav>
 
-      <div class="d-flex flex-wrap">
-          <div class="banco-productos d-flex flex-column justify-content-between">
-            <h4>Trajeta de credito</h4>
-            <p>Adquiera su tarjeta de credito
-              virtual o fisica
-            </p>
-            <button class="btn btn-primary btn-adquirir">Adquirir</button>
-          </div>
-          <div class="banco-productos d-flex flex-column justify-content-between">
-            <h4>Trajeta de debito</h4>
-            <p>Adquiera su tarjeta debito
-              virtual o fisica
-            </p>
-            <button class="btn btn-primary btn-adquirir">Adquirir</button>
-          </div>
-          <div class="banco-productos d-flex flex-column justify-content-between">
-            <h4>Solicite un prestamo</h4>
-            <p>Adquiera un prestamo en linea
-              con un provedor
-            </p>
-            <button class="btn btn-primary btn-adquirir">Adquirir</button>
-          </div>
-          <div class="banco-productos d-flex flex-column justify-content-between">
-            <h4>Cuenta Ahorro</h4>
-            <p>Solicite una cuenta Ahorro
-              y administre de manera correcta 
-              su dinero
-            </p>
-            <button class="btn btn-primary btn-adquirir">Adquirir</button>
-          </div>
-          <div class="banco-productos d-flex flex-column justify-content-between">
-            <h4>Inversiones</h4>
-            <p>Invierta su dinero y Haga
-              crecer su dinero
-            </p>
-            <button class="btn btn-primary btn-adquirir">Adquirir</button>
-          </div>
-      </div>
+        <span>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Curabitur vitae nunc sed velit dignissim sodales ut. Adipiscing tristique risus nec feugiat in fermentum. Et tortor at risus viverra adipiscing at in tellus integer. Lacus sed turpis tincidunt id aliquet risus. Rhoncus urna neque viverra justo nec ultrices dui sapien. Sit amet porttitor eget dolor morbi non arcu. Aliquet porttitor lacus luctus accumsan tortor posuere. Quis auctor elit sed vulputate mi. Tempus egestas sed sed risus pretium. Nulla pellentesque dignissim enim sit amet venenatis. Tincidunt tortor aliquam nulla facilisi cras fermentum odio eu feugiat. Vitae turpis massa sed elementum. Tempor id eu nisl nunc mi ipsum faucibus. Senectus et netus et malesuada fames ac. Nibh tellus molestie nunc non blandit. Massa tincidunt nunc pulvinar sapien.
+
+            Donec massa sapien faucibus et. Turpis egestas integer eget aliquet nibh praesent. Sed velit dignissim sodales ut eu sem integer vitae justo. Nulla porttitor massa id neque aliquam vestibulum morbi blandit. Magna etiam tempor orci eu lobortis. Malesuada fames ac turpis egestas maecenas pharetra convallis. Cras pulvinar mattis nunc sed blandit libero volutpat sed cras. Senectus et netus et malesuada fames ac turpis egestas integer. Et leo duis ut diam. Luctus venenatis lectus magna fringilla. Lectus proin nibh nisl condimentum id venenatis a. Nam libero justo laoreet sit. Phasellus faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis.
+        </span>
+    
+        
     </div>
-
     <footer>
       <div class="row">
         <div class="col-sm-4 d-flex flex-column">
