--- a/about.html
+++ b/about.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Proyecto fb</title>
+    <title>Banco-proyecto</title>
    <!-- <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">-->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="...">
    <link rel="stylesheet" href="css/main.css">
+   <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.min.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -18,9 +19,9 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a href="/index.html" class="nav-link">Home</a></li>
           <li class="nav-item active"><a href="#" class="nav-link">Nosotros</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Precios</a></li>
+          <li class="nav-item"><a href="/servicios.html" class="nav-link">Servicios</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Términos y Condiciones</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
+          <li class="nav-item"><a href="/contacto.html" class="nav-link">Contacto</a></li>
         </ul>
       </div>
     </nav>
@@ -44,10 +45,10 @@
     <footer>
       <div class="row">
         <div class="col-sm-4 d-flex flex-column">
-          <a href="http://www.facebook.com">Facebook</a>
-          <a href="http://www.twitter.com">Twitter</a>
-          <a href="http://www.instagram.com">Instagram</a>
-          <a href="http://www.google.com">Google</a>
+          <a href="http://www.facebook.com"><i class="bi bi-facebook"></i></a>
+          <a href="http://www.twitter.com"><i class="bi bi-twitter-x"></i></a>
+          <a href="http://www.instagram.com"><i class="bi bi-instagram"></i></a>
+          <a href="http://www.google.com"><i class="bi bi-google"></i></a>
         </div>
         <div class="col-sm-4 d-flex flex-column align.-items-center">
           <address> 
