--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Proyecto fb</title>
+    <title>Banco-proyecto</title>
    <!-- <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">-->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="...">
    <link rel="stylesheet" href="css/main.css">
+   <link rel="stylesheet" href="css/index.css">
+   <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.min.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -18,17 +20,23 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active"><a href="#" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="/about.html" class="nav-link">Nosotros</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Precios</a></li>
+          <li class="nav-item"><a href="/servicios.html" class="nav-link">Servicios</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Términos y Condiciones</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
+          <li class="nav-item"><a href="/contacto.html" class="nav-link">Contacto</a></li>
         </ul>
       </div>
     </nav>
     <div class="jumbotron">
-        <h1>Home</h1>
+        <h1>Servicios</h1>
     </div>
     <div class="container">
-      <div class="d-flex">
+      <nav class="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item active" aria-current="page">Home</li>
+        </ol>
+      </nav>
+      <img src="images/banner.jpg" class="banner img-fluid rounded mx-auto d-block" alt="banner">
+      <div class="row">
         <div class="col-sm-4">
           <h3>Adquiera una tarjeta</h3>
           <p>Adquiera su tarjeta de credito o de 
@@ -51,42 +59,65 @@
       </div>
         <hr>
 
-      <div class="d-flex flex-wrap">
-          <div class="banco-productos d-flex flex-column justify-content-between">
-            <h4>Trajeta de credito</h4>
-            <p>Adquiera su tarjeta de credito
-              virtual o fisica
-            </p>
-            <button class="btn btn-primary btn-adquirir">Adquirir</button>
+      <div class="d-flex flex-wrap flex-row-reverse">
+          <div class="card card-banco  d-flex flex-column justify-content-between ml-2">
+            <img src="images/credit-card.jpg" class="card-img-top" alt="Responsive image">
+            <div class="card-body">
+              <h5 class="card-title">Trajeta de credito</h5>
+              <p class="card-text">Adquiera su tarjeta de credito
+                virtual o fisica
+              </p>
+            </div>
+            <div>
+            <button class="btn btn-primary btn-adquirir"><i class="bi bi-bag-heart-fill"></i>Adquirir</button>
+            </div>
           </div>
-          <div class="banco-productos d-flex flex-column justify-content-between">
-            <h4>Trajeta de debito</h4>
-            <p>Adquiera su tarjeta debito
-              virtual o fisica
-            </p>
-            <button class="btn btn-primary btn-adquirir">Adquirir</button>
+          <div class="card card-banco d-flex flex-column justify-content-between ml-2">
+            <img src="images/debit-card.png" class="card-img-top" alt="Responsive image Investments">
+            <div class="card-body">
+              <h5 class="card-title">Trajeta de debito</h5>
+              <p class="card-text">Adquiera su tarjeta debito virtual o fisica </p>
+            </div>
+            <div>
+              <button class="btn btn-primary btn-adquirir"><i class="bi bi-bag-heart-fill"></i>Adquirir</button>
+            </div>
           </div>
-          <div class="banco-productos d-flex flex-column justify-content-between">
-            <h4>Solicite un prestamo</h4>
-            <p>Adquiera un prestamo en linea
-              con un provedor
-            </p>
-            <button class="btn btn-primary btn-adquirir">Adquirir</button>
+          <div class="card card-banco d-flex flex-column justify-content-between ml-2">
+            <img src="images/prestamo.jpeg" class="card-img-top" alt="Responsive image">
+            <div class="card-body">
+              <h5 class="card.title">Solicite un prestamo</h5>
+              <p class="card-text">Adquiera un prestamo en linea
+                con un provedor
+              </p>
+            </div>
+            <div>
+              <button class="btn btn-primary btn-adquirir"><i class="bi bi-bag-heart-fill"></i>Adquirir</button>
+            </div>
           </div>
-          <div class="banco-productos d-flex flex-column justify-content-between">
-            <h4>Cuenta Ahorro</h4>
-            <p>Solicite una cuenta Ahorro
-              y administre de manera correcta 
-              su dinero
-            </p>
-            <button class="btn btn-primary btn-adquirir">Adquirir</button>
+          <div class="card card-banco d-flex flex-column justify-content-between ml-2">
+            <img src="images/cuenta-ahorro.svg" class="card-img-top" alt="Responsive image">
+            <div class="card-body">
+              <h5 class="card.title">Cuenta Ahorro</h5>
+              <p class="card-text">Solicite una cuenta Ahorro
+                y administre de manera correcta 
+                su dinero
+              </p>
+            </div>
+            <div>
+              <button class="btn btn-primary btn-adquirir"><i class="bi bi-bag-heart-fill"></i>Adquirir</button>
+            </div>
           </div>
-          <div class="banco-productos d-flex flex-column justify-content-between">
-            <h4>Inversiones</h4>
-            <p>Invierta su dinero y Haga
-              crecer su dinero
-            </p>
-            <button class="btn btn-primary btn-adquirir">Adquirir</button>
+          <div class="card card-banco d-flex flex-column justify-content-between ml-2">
+            <img src="images/img-inversiones.png" class="card-img-top" alt="Responsive image">
+            <div class="card-body">
+              <h5 class="card.title">Inversiones</h5>
+              <p class="card-text">Invierta su dinero y Haga
+                crecer su dinero
+              </p>
+            </div>
+            <div>
+              <button class="btn btn-primary btn-adquirir"><i class="bi bi-bag-heart-fill"></i>Adquirir</button>
+            </div>
           </div>
       </div>
     </div>
@@ -94,10 +125,10 @@
     <footer>
       <div class="row">
         <div class="col-sm-4 d-flex flex-column">
-          <a href="http://www.facebook.com">Facebook</a>
-          <a href="http://www.twitter.com">Twitter</a>
-          <a href="http://www.instagram.com">Instagram</a>
-          <a href="http://www.google.com">Google</a>
+          <a href="http://www.facebook.com"><i class="bi bi-facebook"></i></a>
+          <a href="http://www.twitter.com"><i class="bi bi-twitter-x"></i></a>
+          <a href="http://www.instagram.com"><i class="bi bi-instagram"></i></a>
+          <a href="http://www.google.com"><i class="bi bi-google"></i></a>
         </div>
         <div class="col-sm-4 d-flex flex-column align.-items-center">
           <address> 
